--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		'https://metrics.outwoods.net/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-PT48T8D');</script>
 		<!-- End Google Tag Manager -->
 		<title>outwoods LLC</title>
@@ -21,7 +21,7 @@
 	</head>
 	<body class="landing is-preload">
 	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PT48T8D"
+	<noscript><iframe src="https://metrics.outwoods.net/ns.html?id=GTM-PT48T8D"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 		<!-- Page Wrapper -->
